tests/errors/logical_operator.php
<?php

declare(strict_types=1);

if ($a and $b) {
}
